Added AsyncTasks & Loader. Main page layout changed. And, fixed ArrayList Type Casting issue. Cleaned the project.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,35 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.android.searchbooks.MainActivity">
+    android:orientation="vertical">
 
-    <TextView
+    <EditText
+        android:id="@+id/search_text_view"
+        android:layout_width="@dimen/search_text_width"
+        android:layout_height="@dimen/search_text_height"
+        android:layout_gravity="center"
+        android:layout_margin="@dimen/main_layout_margin"
+        android:hint="@string/search_books_here"
+        android:orientation="vertical" />
+
+    <Button
+        android:id="@+id/search_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_gravity="center"
+        android:text="@string/search_button_text"
+        android:textAllCaps="true"
+        android:textColor="@color/buttonTextColor"
+        android:textStyle="bold" />
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/info_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center"
+        android:layout_margin="@dimen/main_layout_margin"
+        android:orientation="vertical"
+        android:textAllCaps="true"
+        android:textStyle="italic|bold" />
+</LinearLayout>
