--- a/app/src/main/res/layout/book_list.xml
+++ b/app/src/main/res/layout/book_list.xml
@@ -1,44 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="@dimen/books_list_padding">
 
     <TextView
         android:id="@+id/book_title"
         android:layout_width="match_parent"
-        android:layout_height="88dp"
-        android:textStyle="bold"
-        android:textAllCaps="true"
-        android:textColor="@android:color/black"
+        android:layout_height="@dimen/book_title_height"
         android:gravity="center"
-        tools:text="First Book"
-        />
+        android:textAllCaps="true"
+        android:textColor="@color/bookTitleColor"
+        android:textStyle="bold"
+        tools:text="First Book" />
+
+    <TextView
+        android:id="@+id/author_name"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/book_attributes_height"
+        android:gravity="center"
+        android:textColor="@color/bookAuthorColor"
+        android:textStyle="italic"
+        tools:text="Jiwan Pokharel" />
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="88dp"
+        android:layout_height="@dimen/book_attributes_height"
         android:orientation="horizontal">
-        <TextView
-            android:id="@+id/author_name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="4"
-            android:textStyle="italic"
-            tools:text="Jiwan Pokharel"/>
+
         <TextView
             android:id="@+id/published_date"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            tools:text="2017"/>
+            android:gravity="left"
+            tools:text="2017" />
+
         <TextView
             android:id="@+id/print_type"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            tools:text="Book"
-            />
+            android:gravity="right"
+            tools:text="Book" />
     </LinearLayout>
 
 </LinearLayout>
