--- a/app/src/main/res/layout/book_list.xml
+++ b/app/src/main/res/layout/book_list.xml
@@ -18,31 +18,25 @@
 
     <TextView
         android:id="@+id/author_name"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/book_attributes_height"
+        style="@style/authorAndDetailsStyle"
         android:gravity="center"
         android:textColor="@color/bookAuthorColor"
         android:textStyle="italic"
         tools:text="Jiwan Pokharel" />
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/book_attributes_height"
+        style="@style/authorAndDetailsStyle"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/published_date"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            style="@style/bookDetailsStyle"
             android:gravity="left"
             tools:text="2017" />
 
         <TextView
             android:id="@+id/print_type"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            style="@style/bookDetailsStyle"
             android:gravity="right"
             tools:text="Book" />
     </LinearLayout>
